--- a/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
+++ b/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
@@ -6,9 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>a99e3641-6a26-48e6-bf98-4f405d93d3fd</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Docker.DotNet.Enhanced" Version="3.128.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
