--- a/ChoreBuddies.Backend/Dockerfile
+++ b/ChoreBuddies.Backend/Dockerfile
@@ -6,11 +6,12 @@ USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
+RUN apt-get update && apt-get install -y curl iputils-ping net-tools
 
 
 # Ten etap służy do kompilowania projektu usługi
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
+ARG BUILD_CONFIGURATION=Development
 WORKDIR /src
 COPY ["ChoreBuddies.Backend/ChoreBuddies.Backend.csproj", "ChoreBuddies.Backend/"]
 RUN dotnet restore "./ChoreBuddies.Backend/ChoreBuddies.Backend.csproj"
@@ -20,7 +21,7 @@ RUN dotnet build "./ChoreBuddies.Backend.csproj" -c $BUILD_CONFIGURATION -o /app
 
 # Ten etap służy do publikowania projektu usługi do skopiowania do etapu końcowego
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
+ARG BUILD_CONFIGURATION=Development
 RUN dotnet publish "./ChoreBuddies.Backend.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # Ten etap jest używany w środowisku produkcyjnym lub w przypadku uruchamiania z programu VS w trybie regularnym (domyślnie, gdy nie jest używana konfiguracja debugowania)
