--- a/ChoreBuddies.Backend/appsettings.json
+++ b/ChoreBuddies.Backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,8095;Database=HobbyDB;User=sa;Password=Password123!;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
