--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,9 +30,13 @@ jobs:
     - name: Install dotnet-format tool
       run: dotnet tool install -g dotnet-format
 
-    - name: Check code formatting
+    - name: Check pwd
       run: pwd
+      
+    - name: Check ls
       run: ls
+      
+    - name: Check code formatting
       run: |
         # This command will fail (exit code 1) if any files are not formatted correctly.
         dotnet format ChoreBuddies.Backend.csproj --verify-no-changes --verbosity detailed
