--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,10 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+# Force CRLF for specific file types
+*.cs text eol=crlf
+*.sln text eol=crlf
+*.csproj text eol=crlf
+*.json text eol=crlf
+*.xml text eol=crlf
