--- a/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
+++ b/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Docker.DotNet.Enhanced" Version="3.128.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.16" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.3.0" />
