--- a/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
+++ b/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,5 +17,7 @@
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
   </ItemGroup>
+
+  <Import Project="..\libs\shared-models\ChoreBuddies_SharedModels\ChoreBuddies_SharedModels.projitems" Label="Shared" />
 
 </Project>
