--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,13 +19,13 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Restore dependencies
-      run: dotnet restore ChoreBuddies.Backend.sln 
+      run: dotnet restore ChoreBuddies.sln 
 
     - name: Build
-      run: dotnet build ChoreBuddies.Backend.sln --no-restore --configuration Release
+      run: dotnet build ChoreBuddies.sln --no-restore --configuration Release
 
     - name: Test
-      run: dotnet test ChoreBuddies.Backend.sln --no-build --verbosity normal
+      run: dotnet test ChoreBuddies.sln --no-build --verbosity normal
       
     - name: Install dotnet-format tool
       run: dotnet tool install -g dotnet-format
