--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -27,6 +27,11 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=ChoreBuddiesDB;User=sa;Password=Password123!;TrustServerCertificate=True;MultipleActiveResultSets=true;
+      - JwtOptions__Secret=936a4398b0219e3c70f61acea1f03cc9725b780caf4afa13567ac48f660c88d0562f02f2071275d8031e807b096c69afd9e85884f3edd4c2c49abe322139dfb9
+      - JwtOptions__AccessTokenExpirationMinutes=15
+      - JwtOptions__RefreshTokenExpirationDays=7
+      - JwtOptions__Issuer=http://backend:8080
+      - JwtOptions__Audience=http://frontend:8080
     networks:
       - app-network   
   frontend:
