--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -34,19 +34,19 @@ services:
       - JwtOptions__Audience=http://frontend:8080
     networks:
       - app-network   
-  frontend:
-    build:
-      context: ../
-      dockerfile: ChoreBuddies.Frontend/Dockerfile
-    ports:
-      - "5001:8080"
-    depends_on:
-      - backend
-    restart: on-failure
-    environment: 
-      - ASPNETCORE_ENVIRONMENT=Development
-    networks:
-      - app-network  
+  # frontend:
+  #   build:
+  #     context: ../
+  #     dockerfile: ChoreBuddies.Frontend/Dockerfile
+  #   ports:
+  #     - "5001:8080"
+  #   depends_on:
+  #     - backend
+  #   restart: on-failure
+  #   environment: 
+  #     - ASPNETCORE_ENVIRONMENT=Development
+  #   networks:
+  #     - app-network  
 networks:
   app-network:
     driver: bridge
