--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -45,6 +45,7 @@ services:
     restart: on-failure
     environment: 
       - ASPNETCORE_ENVIRONMENT=Development
+      - ApiUrl=https://localhost:5000
     networks:
       - app-network  
 networks:
