--- a/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
+++ b/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <UserSecretsId>2ef20d96-c9a4-47b5-8db5-447deec4bbee</UserSecretsId>
+    <ContainerDevelopmentMode>Regular</ContainerDevelopmentMode>
   </PropertyGroup>
 
   <ItemGroup>
