--- a/ChoreBuddies.Frontend/wwwroot/appsettings.json
+++ b/ChoreBuddies.Frontend/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
-  "ApiUrl": "https://localhost:5000",
+  "ApiUrl": "http://localhost:5000",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
