--- a/Docker/nginx.conf
+++ b/Docker/nginx.conf
@@ -2,6 +2,10 @@ events { }
 
 http {
     include /etc/nginx/mime.types;
+	types {
+        application/wasm wasm;
+    }
+
     default_type application/octet-stream;
 
     server {
