--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,9 @@ jobs:
       with:
         dotnet-version: 8.0.x
 
+    - name: Verify .NET Version
+      run: dotnet --info
+
     - name: Restore dependencies
       run: dotnet restore ChoreBuddies.sln 
 
