--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     build:
       context: ../
       dockerfile: ChoreBuddies.Backend/Dockerfile
+    env_file:
+      - .env
     ports:
       - "5000:8080"
     depends_on:
