--- a/ChoreBuddies.Backend/appsettings.json
+++ b/ChoreBuddies.Backend/appsettings.json
@@ -9,6 +9,10 @@
     "AccessTokenExpirationMinutes": 15,
     "RefreshTokenExpirationDays": 7
   },
+  "Maileroo": {
+    "From": "ChoreBuddies@8040d76323a2d018.maileroo.org",
+    "FromName": "ChoreBuddies"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
