Add default reward

--- a/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
+++ b/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
@@ -51,6 +51,9 @@
     <None Update="Infrastructure\Data\Csv\default_chores.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Infrastructure\Data\Csv\default_rewards.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
