--- a/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
+++ b/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="AutoMapper" Version="15.0.1" />
     <PackageReference Include="Docker.DotNet.Enhanced" Version="3.128.5" />
     <PackageReference Include="FirebaseAdmin" Version="3.4.0" />
+    <PackageReference Include="Hangfire" Version="1.8.22" />
     <PackageReference Include="Maileroo.DotNet.SDK" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.19" />
