--- a/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
+++ b/ChoreBuddies.Frontend/ChoreBuddies.Frontend.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Docker.DotNet.Enhanced" Version="3.128.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.20" />
