--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
         - "8095:1433"
     healthcheck:
-        test: [ "CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "localhost,1433", "-U", "sa", "-P", "Password123!", "-Q", "SELECT 1" ]
+        test: [ "CMD", "/opt/mssql-tools18/bin/sqlcmd", "-S", "localhost", "-U", "sa", "-P", "Password123!", "-Q", "SELECT 1", "-C" ]
         interval: 10s
         timeout: 5s
         retries: 5
