--- a/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
+++ b/ChoreBuddies.Backend/ChoreBuddies.Backend.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Maileroo.DotNet.SDK" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.19" />
+    <PackageReference Include="Microsoft.Bcl.TimeProvider" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
       <PrivateAssets>all</PrivateAssets>
